<resources>
    <string name="app_name">Payments</string>
    <string name="total_amount">Total Amount = \u20B9</string>
    <string name="rupees_symbol">\u20B9</string>
    <string name="amount">0</string>
    <string name="amount_text">Amount</string>
    <string name="payments">Payments</string>
    <string name="add_payment_ul"><u>Add payment</u></string>
    <string name="save">Save</string>
    <string name="add_payment">Add Payment</string>
    <string name="provider">Provider (ICICI,Citibank, etc.)</string>
    <string name="transaction_reference">Transaction Reference</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="cash">Cash = Rs. </string>
    <string name="bank">Bank Transfer = Rs. </string>
    <string name="card">Credit Card = Rs. </string>
</resources>