<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/dp_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_30"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/add_payment"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:text="@string/rupees_symbol"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/dp_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAmount"
                    android:digits="0123456789"
                    android:maxLength="9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/amount_text"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="@dimen/dp_2" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:background="@drawable/edit_text_bg">

            <Spinner
                android:id="@+id/spnType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_58"
                android:background="@null"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_48"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/edit_text_bg"
                android:padding="10dp"
                android:src="@drawable/drop_arrow"
                app:tint="@color/black" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/llBankTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/dp_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProvider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/provider"
                    android:maxLength="15"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="@dimen/dp_2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchCountriesInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/dp_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etReference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/transaction_reference"
                    android:maxLength="15"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="@dimen/dp_2" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_58"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:gravity="center"
                android:id="@+id/tvCancel"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/royal_blue"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                android:text="@string/ok"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>